# Distance-Based-Outlier-Detection

./: README.md  app.py  basic_outlier_dataset.csv  data_processor.py  financial_dataset.csv  iris_like_dataset.csv  metrics.py  outlier_detectors.py  pyproject.toml  sample_data.py  visualizations.py
